# myers-agrep

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
data/: example.txt
data/synthetical/: 100000.chars  1000000.chars  50000.chars  700000.chars  800000.chars
files/: DATA.16
src/: Baseline_BasicDP.cpp  Block.cpp  Block.hpp  agrep.cpp  agrep.hpp  basic_algorithm.cpp  basic_algorithm.hpp  block_algorithm.cpp  block_algorithm.hpp  globals.hpp  main.cpp  pattern_parse.hpp  precompute_one_block.cpp  ukkonen_algorithm.cpp  utils.hpp
test_data/synthetical/: 100.chars  1000.chars  10000.chars  300000.chars  75000.chars
tests/: edlib.cpp  plotter.py  tester.sh  tester_acc.sh  tester_k.sh  tester_length.sh  tester_pattern.sh  time_test.cpp
